corrected menu overlapping issue

--- a/customer-frontend/src/pages/menu.css
+++ b/customer-frontend/src/pages/menu.css
@@ -18,8 +18,5 @@
 }
 
 #menu-div {
-    height: 100vh;
-    /* padding:10px; */
     margin: auto;
-    /* background: purple */
 }
